# rhythm-reminder

./: .gitignore  PRD_节奏Rhythm_定时提醒产品.md  README.md  TDD_节奏Rhythm_技术设计.md  _rebuild.ps1  _winbuild.ps1  项目进度评估.md
.github/workflows/: release-macos.yml
rhythm-desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rhythm-desktop/src/: App.svelte  main.ts  styles.css
rhythm-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rhythm-desktop/src-tauri/capabilities/: default.json
rhythm-desktop/src-tauri/icons/: icon.icns
rhythm-desktop/src-tauri/src/: main.rs
rhythm-desktop/src/lib/: store.ts
rhythm-desktop/src/lib/components/: BreakOverlay.svelte  Home.svelte  NewReminder.svelte  Settings.svelte  Sidebar.svelte  Stats.svelte  TrayPopover.svelte
rhythm-desktop/src/lib/engine/: engine.test.ts  engine.ts  index.ts  presets.ts  scheduler.ts  store.ts  store_contract.test.ts  time.ts  types.ts
rhythm-desktop/src/lib/platform/: context.ts  notify.ts  sound.ts
ux-mockup/: index.html
