[package]
name = "rhythm-desktop"
version = "0.1.0"
description = "节奏 Rhythm —— 灵活间隔提醒助手（桌面端）"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rhythm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-positioner = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 系统能力适配层：跨平台系统空闲检测
user-idle = "0.6"

# 前台应用采集（分平台）
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# NSWorkspace.frontmostApplication 取前台应用
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = "0.2"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = "s"
